--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^2.4.2"
+    "@typescript-eslint/eslint-plugin": "2",
+    "eslint": "6",
+    "eslint-config-standard-with-typescript": "^16.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4",
+    "git-commit-msg-linter": "^2.4.2",
+    "typescript": "^3.9.3"
   }
 }
