--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/helmet": "^0.0.47",
     "@typescript-eslint/eslint-plugin": "2",
     "eslint": "6",
     "eslint-config-standard-with-typescript": "^16.0.0",
@@ -13,5 +16,10 @@
     "eslint-plugin-standard": "4",
     "git-commit-msg-linter": "^2.4.2",
     "typescript": "^3.9.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^3.22.0"
   }
 }
