--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts --watch"
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts --watch"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.47",
+    "@types/mongoose": "^5.7.21",
     "@typescript-eslint/eslint-plugin": "2",
     "eslint": "6",
     "eslint-config-standard-with-typescript": "^16.0.0",
@@ -25,6 +26,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.22.0"
+    "helmet": "^3.22.0",
+    "mongoose": "^5.9.16"
   }
 }
