--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
+    "@types/express-serve-static-core": "^4.17.7",
     "@types/helmet": "^0.0.47",
     "@types/mongoose": "^5.7.21",
     "@typescript-eslint/eslint-plugin": "2",
