--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node ./dist/server.js"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/express-serve-static-core": "^4.17.7",
     "@types/helmet": "^0.0.47",
@@ -25,6 +26,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
